--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>T THE WEEKND </h1>
-    
+    <h1> THE WEEKND </h1>
+    <p> Nesse site eu sou falar sobre o meu cantor favorito, o <strong>THE WEEKND</strong> as músicas que ele compõem sao internacionais, pop. </p>
+<p> O seu nome verdadeiro é "Abel Makkonen Tesfaye", mas em sua carreira toda ele se deu em nome de The Weeknd</p>
+
 </body>
 </html>
