--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1> -THE WEEKND- </h1>
     <p> Nesse site eu sou falar sobre o meu cantor favorito, o <strong>THE WEEKND</strong> as músicas que ele compõem sao internacionais, pop. </p>
-<p> O seu nome verdadeiro é "Abel Makkonen Tesfaye", mas em sua carreira toda ele se deu em nome de The Weeknd</p>
+    <img src="download.jpeg">
 <p> the weeknd nasceu em 16 de fevereiro de 1990, em Toronto,Canadà. </p>
 </body>
 </html>
