--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 </head>
 <body>
     <h1> -THE WEEKND- </h1>
-    <p> Nesse site eu sou falar sobre o meu cantor favorito, o <strong>THE WEEKND</strong> as músicas que ele compõem sao internacionais, pop. </p>
-   <p> </p>
+<P> '<strong> the weeknd</strong> é um dos artistas mais influentes da música pop conteporânea, conhecido por suas letras emotivas e inovadoras que misturam varios genêros músicais.</P>
+   <P> sua carreira inclui vários álbuns aclamados pela crítica e uma série de colaboracões com outros artistas famosos.</P>
+<P>The weeknd mais conhecido como Abel Tesfaye, nasceu em 16 de fevereiro de 1990 em Toronto no Canadá. </P>
+<p> Nos últimos anos o nome do <strong>THE WEEKND</strong> tornou-se um sinônimo de sucesso estrondoso na indústria da música. ABEL TESFAYE se tornou um dos maiores fenômenos músicais na nossa geracão. </p>
     <img src="download.jpeg">
-<p> the weeknd nasceu em 16 de fevereiro de 1990, em Toronto,Canadà. </p>
+<p> The Weeknd foi um dos primeiros artistas a compreender o poder das plataformas digitais e mídias sociais para promover sua música.</p>
+<p> Com estratégias de lancamento cuidadosamente orquestradas e uma presenca onlline engajada, ele conseguiu impulsionar suas músicas para o topo da parada e melhorar sua posicão no cenário músical.</p>
+<P> Ao longo de sua carreira, The Weeknd escolheu colaborar com uma variedade de artistas, desde figuras estabelecidas até novos talentos. </P>
+<P> Essas colaboracões nao apenas aumentou sua base de fãs em um nïvel absurdo, também demonstrou sua versatilidade e adaptabilidade no mundo da música. </P>
+<P> </P>
 </body>
 </html>
