--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
    <P> sua carreira inclui vários álbuns aclamados pela crítica e uma série de colaboracões com outros artistas famosos.</P>
 <P>The weeknd mais conhecido como Abel Tesfaye, nasceu em 16 de fevereiro de 1990 em Toronto no Canadá. </P>
 <p> Nos últimos anos o nome do <strong>THE WEEKND</strong> tornou-se um sinônimo de sucesso estrondoso na indústria da música. ABEL TESFAYE se tornou um dos maiores fenômenos músicais na nossa geracão. </p>
-    <img src="  OIP (3).jpg "
+<ol>
+    <h2> AS MELHORES MÙSICAS DO THE WEEKND</h2>
+         <li> The Hills </li>
+         <li> Starboy </li>
+         <li> Often </li>
+         <li> Reeminder </li>
+         <li> Love Me Harder </li>
+</ol>
+<p> essas são as 5 melhores mùsicas do the weekned, e as mais populares pelo mundo todo.</p>
+<img src="  OIP (3).jpg "
 <p> The Weeknd foi um dos primeiros artistas a compreender o poder das plataformas digitais e mídias sociais para promover sua música.</p>
 <p> Com estratégias de lancamento cuidadosamente orquestradas e uma presenca onlline engajada, ele conseguiu impulsionar suas músicas para o topo da parada e melhorar sua posicão no cenário músical.</p>
 <P> Ao longo de sua carreira, The Weeknd escolheu colaborar com uma variedade de artistas, desde figuras estabelecidas até novos talentos. </P>
