--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p> Nos últimos anos o nome do <strong>THE WEEKND</strong> tornou-se um sinônimo de sucesso estrondoso na indústria da música. ABEL TESFAYE se tornou um dos maiores fenômenos músicais na nossa geracão. </p>
 
 <ol>
-    <h3> AS MELHORES MÙSICAS DO THE WEEKND</h3>
+    <h3> SUAS MELHORES MÙSICAS </h3>
          <li> The Hills </li>
          <li> Starboy </li>
          <li> Often </li>
