--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <header>
-    <a> </a>
+    <a href="https://youtu.be/34Na4j8AVgA?si=kIo3WzD4E3cQtdWO "> LINK </a>
 </header> 
     <h1> -THE WEEKND- </h1>
-<P> '<strong> the weeknd</strong> é um dos artistas mais influentes da música pop conteporânea, conhecido por suas letras emotivas e inovadoras que misturam varios genêros músicais.</P>
+<h2> -carreira e sua vida pessoAL-</h2>
+    <P> '<strong> the weeknd</strong> é um dos artistas mais influentes da música pop conteporânea, conhecido por suas letras emotivas e inovadoras que misturam varios genêros músicais.</P>
    <P> sua carreira inclui vários álbuns aclamados pela crítica e uma série de colaboracões com outros artistas famosos.</P>
 <P>The weeknd mais conhecido como Abel Tesfaye, nasceu em 16 de fevereiro de 1990 em Toronto no Canadá. </P>
 <p> Nos últimos anos o nome do <strong>THE WEEKND</strong> tornou-se um sinônimo de sucesso estrondoso na indústria da música. ABEL TESFAYE se tornou um dos maiores fenômenos músicais na nossa geracão. </p>
-
 <ol>
     <h3> SUAS MELHORES MÙSICAS </h3>
          <li> The Hills </li>
