--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <header>
-    <a href="https://youtu.be/34Na4j8AVgA?si=kIo3WzD4E3cQtdWO "> LINK </a>
+    <a href="https://youtu.be/34Na4j8AVgA?si=kIo3WzD4E3cQtdWO "> LINK DE SUAS MÙSICAS MAIS BOMBADAS </a>
+<a href="https://youtu.be/2AH5l-vrY9Q?si=1-fpO27l_1Y0Qs1M "> '" DIE FOR YOU" </a>
+<a href="https://youtu.be/h_VCgsWLmY4?si=ORWdsXWnjluHE4a_ "> REMINDER </a>
 </header> 
     <h1> -THE WEEKND- </h1>
 <h2> -carreira e sua vida pessoAL-</h2>
