--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
          <li> Love Me Harder </li>
 </ol>
 <p class="vermelho"> essas são as 5 melhores mùsicas do the weekned, e as mais populares pelo mundo todo.</p>
-<img src="  OIP (3).jpg "
+<img src="OIP(3).jpg">
 <p> The Weeknd foi um dos primeiros artistas a compreender o poder das plataformas digitais e mídias sociais para promover sua música.</p>
 <p> Com estratégias de lancamento cuidadosamente orquestradas e uma presenca onlline engajada, ele conseguiu impulsionar suas músicas para o topo da parada e melhorar sua posicão no cenário músical.</p>
-<P> Ao longo de sua carreira, The Weeknd escolheu colaborar com uma variedade de artistas, desde figuras estabelecidas até novos talentos. </P>
-<P> Essas colaboracões nao apenas aumentou sua base de fãs em um nïvel absurdo, também demonstrou sua versatilidade e adaptabilidade no mundo da música. </P>
-<P> </P>
+<P> Ao longo de sua carreira, The Weeknd escolheu colaborar com uma variedade de artistas, desde figuras estabelecidas até novos talentos. </p>
+<P> Essas colaboracões nao apenas aumentou sua base de fãs em um nïvel absurdo, também demonstrou sua versatilidade e adaptabilidade no mundo da música. </p>
+<P> 
 </body>
 </html>
