--- a/index.html
+++ b/index.html
@@ -12,9 +12,25 @@
 <a href="https://youtu.be/2AH5l-vrY9Q?si=1-fpO27l_1Y0Qs1M "> '" DIE FOR YOU" </a>
 <a href="https://youtu.be/h_VCgsWLmY4?si=ORWdsXWnjluHE4a_ "> REMINDER </a>
 </header> 
-    <h1> -THE WEEKND- </h1>
+<html lang="pt-BR">
+    <head>
+      <link rel="stylesheet" href="styles.css" />
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet"
+      />
+      <title>Aluraflix</title>
+    </head>
+  
+    <body>
+      <header>
+  </html> 
+<h1> -THE WEEKND- </h1>
 <h2> -carreira e sua vida pessoAL-</h2>
-   
+   </body>
+  </header>
 <p> '<strong> the weeknd</strong> é um dos artistas mais influentes da música pop conteporânea, conhecido por suas letras emotivas e inovadoras que misturam varios genêros músicais.</P>
    <P> sua carreira inclui vários álbuns aclamados pela crítica e uma série de colaboracões com outros artistas famosos.</P>
 <P>The weeknd mais conhecido como Abel Tesfaye, nasceu em 16 de fevereiro de 1990 em Toronto no Canadá. </P>
