--- a/index.html
+++ b/index.html
@@ -3,27 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel=" stylesheet" href="style.css">
+    <title>The weekend</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
     <a href="https://youtu.be/34Na4j8AVgA?si=kIo3WzD4E3cQtdWO "> LINK DE SUAS MÙSICAS MAIS BOMBADAS </a>
 <a href="https://youtu.be/2AH5l-vrY9Q?si=1-fpO27l_1Y0Qs1M "> '" DIE FOR YOU" </a>
 <a href="https://youtu.be/h_VCgsWLmY4?si=ORWdsXWnjluHE4a_ "> REMINDER </a>
-</header> 
-<html lang="pt-BR">
-    <head>
-      <link rel="stylesheet" href="styles.css" />
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet"
-      />
-      <title>Aluraflix</title>
-    </head>
-  
     <body>
       <header>
   </html> 
